...
            "state": "translated",
            "value": "Discriminação"
          }
        }
      }
    },
    "Risco à segurança": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Risco à segurança"
          }
...
            "state": "translated",
            "value": "Meu turno"
          }
        }
      }
    },
    "Meus turnos": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Meus turnos"
          }
...
            "state": "translated",
            "value": "Vagas"
          }
        }
      }
    },
    "Vagas no DF": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Vagas no DF"
          }
...
            "state": "translated",
            "value": "Fale com o suporte"
          }
        }
      }
    },
    "Fechar": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Fechar"
          }
...
            "state": "translated",
            "value": "Vagas no modo seleção exigem pelo menos 24 horas de antecedência."
          }
        }
      }
    },
    "Cancelar": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Cancelar"
          }
...
